--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     networks:
       - backend
     volumes:
-      - D:\\Dockerimages\\emailsendsafe\\public_html:/var/www/html
+      - './public_html:/var/www/html'
   apache:
     build: './apache/'
     container_name: Apachecontainer
@@ -17,9 +17,9 @@ services:
       - frontend
       - backend
     ports:
-      - "8080:80"
+      - "85:80"
     volumes:
-      - D:\\Dockerimages\\emailsendsafe\\public_html:/var/www/html
+      - './public_html:/var/www/html'
   mysql:
     build: './mysql/'
     image: mysql:5.7.34
@@ -28,14 +28,14 @@ services:
     networks:
       - backend
     ports:
-      - "3308:3306"  
+      - "3303:3306"  
     environment:
       - MYSQL_ROOT_PASSWORD=Root@123
       - MYSQL_USER= administrator
       - MYSQL_PASSWORD= admin123
       - MYSQL_ROOT_HOST= '%'
     volumes:
-      - D:\\Dockerimages\emailsendsafe\\mysql\\data:/var/lib/mysql
+      - './mysql/data:/var/lib/mysql'
 networks:
   frontend:
   backend:
