--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - './public_html:/var/www/html'
   mysql:
     build: './mysql/'
-    image: mysql:5.7.34
+    image: mariadb:10.5.8
     container_name: Mysqlcontainer
     command: --default-authentication-plugin=mysql_native_password
     networks:
