--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -8,5 +8,7 @@ log-error       = /var/log/mysql/error.log
 sql_mode = "STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
 # By default we only accept connections from localhost
 bind-address    = 0.0.0.0
+innodb_strict_mode=0    
 # Disabling symbolic-links is recommended to prevent assorted security risks
 symbolic-links=0
+max_allowed_packet          = 32M
