Update mysql Dockerfile

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,3 +1,4 @@
-FROM mysql:5.7.34
+FROM mariadb:10.2.44
 
-ADD my.cnf /etc/mysql/mysql.conf.d/mysqld.cnf
+ADD my.cnf /etc/mysql/conf.d/
+#RUN chown -R mysql:mysql /var/log/mysql/error.log
