--- a/apache/ess.local.conf
+++ b/apache/ess.local.conf
@@ -11,8 +11,8 @@ LoadModule proxy_fcgi_module /usr/local/apache2/modules/mod_proxy_fcgi.so
     <FilesMatch \.php$>
         SetHandler "proxy:fcgi://php:9000/$1"
     </FilesMatch>
-    DocumentRoot /var/www/html/public
-    <Directory /var/www/html/public>
+    DocumentRoot /var/www/html
+    <Directory /var/www/html>
         DirectoryIndex index.php
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
